--- a/portfolio.html
+++ b/portfolio.html
@@ -339,6 +339,18 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form-wrap">
+          <strong>Подпишитесь на рассылку</strong>
+          <form class="footer-form">
+            <input class="footer-input" type="text" name="email" placeholder="E-mail" />
+            <button class="button subscribe-btn" type="submit">
+              Подписаться
+              <svg class="icon-subscribe" width="24" height="24">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
