--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
         </div>
         <div class="footer-form-wrap">
           <strong>Подпишитесь на рассылку</strong>
-          <form class="footer-form">
+          <form class="footer-form" autocomplete="off">
             <input class="footer-input" type="text" name="email" placeholder="E-mail" />
             <button class="button subscribe-btn" type="submit">
               Подписаться
@@ -454,7 +454,7 @@
           </svg>
         </button>
         <strong class="modal-title">Оставьте свои данные, мы вам перезвоним</strong>
-        <form class="modal-form">
+        <form class="modal-form" autocomplete="off">
           <label class="modal-form-label">
             Имя
             <input class="modal-form-text" type="text" name="" id="" />
