--- a/portfolio.html
+++ b/portfolio.html
@@ -341,7 +341,7 @@
         </div>
         <div class="footer-form-wrap">
           <strong>Подпишитесь на рассылку</strong>
-          <form class="footer-form">
+          <form class="footer-form" autocomplete="off">
             <input class="footer-input" type="text" name="email" placeholder="E-mail" />
             <button class="button subscribe-btn" type="submit">
               Подписаться
