--- a/index.html
+++ b/index.html
@@ -455,22 +455,50 @@
         </button>
         <strong class="modal-title">Оставьте свои данные, мы вам перезвоним</strong>
         <form class="modal-form" autocomplete="off">
-          <label class="modal-form-label">
+          <label class="modal-label">
             Имя
-            <input class="modal-form-text" type="text" name="" id="" />
+            <span>
+              <input class="modal-text" type="text" name="name" placeholder="Василий Пупкин" />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-name"></use>
+              </svg>
+            </span>
           </label>
-          <label class="modal-form-label">
+          <label class="modal-label">
             Телефон
-            <input class="modal-form-text" type="text" name="" id="" />
+            <span>
+              <input class="modal-text" type="tel" name="phone" placeholder="096 111 11 11" />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </span>
           </label>
-          <label class="modal-form-label">
+          <label class="modal-label">
             Почта
-            <input class="modal-form-text" type="text" name="" id="" />
+            <span>
+              <input class="modal-text" type="email" name="mail" placeholder="v.pupkin@mail.com" />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </span>
           </label>
-          <label class="modal-form-label">
+          <label class="modal-label">
             Комментарий
-            <input class="modal-form-text" type="text" name="" id="" />
+            <textarea
+              class="modal-text textarea"
+              name="comment"
+              placeholder="Введите текст"
+            ></textarea>
           </label>
+          <label class="policy-label">
+            Соглашаюсь с рассылкой и принимаю
+            <a href="#">Условия договора</a>
+            <input class="policy-checkbox" type="checkbox" name="policy" />
+            <svg class="icon-check" width="15" height="15">
+              <use href="./images/icons.svg#icon-check"></use>
+            </svg>
+          </label>
+          <button class="button" type="submit">Отправить</button>
         </form>
       </div>
     </div>
